Change S3ClientSettings Affix Settings to normal Setting